--- a/examples/css/main.css
+++ b/examples/css/main.css
@@ -72,7 +72,6 @@
         position: absolute;
         right: 36px;
         top: 29px;
-        width: 253px;
     }
     .title {
         background-image: url(../img/title.png);
@@ -106,6 +105,10 @@
         background-size: contain;
         height: 56px;
         width: 56px;
+    }
+    
+    img:not([src]):not([srcset]) {
+        visibility: hidden;
     }
 
     .slow-blur {
@@ -222,9 +225,6 @@
         max-height:100%;
         box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
     }
-    .gallery h, .gallery p {
-    }
-
     p, h2 {
         max-width: 600px;
         margin: 0 auto;
@@ -248,3 +248,56 @@
         float: right;
         padding: 20px 40px;
     } 
+    .fbwidget {
+        text-align: center;
+        width:500px; 
+        float: right;
+        margin-right: 100px;
+    }
+    .instawidget {
+        text-align: center; 
+        width:500px; 
+        margin: 0 0 0 100px;
+        float: left;
+    }
+
+.lazyload {
+	opacity: 0;
+	transform: scale(0.8);
+}
+
+.loaded {
+	opacity: 1;
+	transform: scale(1);
+	transition: all 700ms;
+}
+
+    
+.effect-row-middle  > [data-expand]:nth-child(2),
+.effect-row-reverse  > [data-expand]:nth-child(3),
+.effect-row > [data-expand]:nth-child(1) {
+    transition-delay: 100ms;
+}
+
+.effect-row-middle  > [data-expand]:nth-child(1),
+.effect-row-middle  > [data-expand]:nth-child(3),
+.effect-row-reverse  > [data-expand]:nth-child(2),
+.effect-row > [data-expand]:nth-child(2) {
+    transition-delay: 400ms;
+}
+
+.effect-row-reverse  > [data-expand]:nth-child(1),
+.effect-row > [data-expand]:nth-child(3) {
+    transition-delay: 700ms;
+}
+
+/*.blur-up {*/
+    /*-webkit-filter: blur(4px);*/
+    /*filter: blur(4px);*/
+    /*transition: filter 400ms, -webkit-filter 400ms;*/
+/*}*/
+
+/*.blur-up.lazyloaded {*/
+    /*-webkit-filter: blur(0);*/
+    /*filter: blur(0);*/
+/*}*/
