--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 
 
     html {
-        background-image: url(../img/bg.png);
+        background-image: url(../img/bg.jpg);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
