--- a/css/main.css
+++ b/css/main.css
@@ -245,9 +245,11 @@
         margin: 20px auto;
     }
     .gallery figure img {
-        max-width:100%;
-        max-height:100%;
-        box-shadow: 0px 5px 10px rgba(0,0,0,0.2);
+        /*box-shadow: 0px 5px 10px rgba(0,0,0,0.2);*/
+        width: auto;
+        height : auto;
+        max-height: 100%;
+        max-width: 100%;
     }
     h2 {
         max-width: 600px;
