Fixed up rendering loop in aquarelle lib
Also fastfarwards. iPhone 5s works well now. Nexus 5 not so much.

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@
             margin: 5% auto;
         }
 
-    canvas {        
+    .splash, canvas {        
         height: 50%;
         width: 50%;
         pointer-events: none;
